# FastExcel

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
.claude/: settings.json
cmake/: FastExcelConfig.cmake.in
docs/: AI_Coding_Standards.md  Cell_Optimization_Summary.md  Code_Optimization_Summary.md  Code_Processing_Flow.md  Default_Performance_Configuration.md  Design_Pattern_Improvements.md  Documentation_Cleanup_Report.md  Excel_ZIP_Compression_Fix.md  FastExcel_API_Documentation.md  FastExcel_API_Reference.md  FastExcel_Architecture_Analysis.md  FastExcel_Architecture_Diagrams.md  FastExcel_Cell_Optimization_Complete.md  FastExcel_Cell_Optimization_Proposal.md  FastExcel_Compression_Optimization_Complete.md  FastExcel_Data_Flow_Analysis.md  FastExcel_Optimization_Roadmap.md  FastExcel_Optimization_Summary.md  FastExcel_Optimization_and_Testing_Summary.md  FastExcel_Performance_Optimization_Complete.md  FastExcel_Performance_Optimization_Summary.md  FastExcel_Streaming_and_XML_Generation_Architecture.md  FastExcel_ZIP_DataDescriptor_Issue_Fix.md  FastExcel架构与格式管理重构文档.md  INDEX.md  Implementation_Summary.md  LibXlsxWriter_Rewrite_Guide.md  Minizip_NG_Analysis.md  Next_Steps_Optimization_Roadmap.md  Parallel_Compression_Implementation_Plan.md  Performance_Optimization_Guide.md  Project_Summary.md  README.md  StreamingMode_ExcelCompatibility_Fix.md  TrueStreamingMode_Fix_Final.md  Workbook_Mode_Selection_Guide.md  Workbook_Unified_Interface_Proposal.md  XLSXReader_Implementation.md  XLSX_列样式问题深度分析报告.md  XLSX主题颜色问题完整分析报告.md  (+26 more)
docs/api/: API_Reference.md  Complete_API_Usage_Guide.md  Implementation_Guide.md  Quick_Reference.md  README.md  archive.md  core-api.md  core.md  opc.md  reader.md  theme.md  tracking.md  utils.md  xml.md
docs/architecture/: overview.md
docs/guides/: installation.md  quick-start.md
examples/: 01_basic_usage.cpp  02_basic_usage.cpp  03_reader_example.cpp  04_formatting_example.cpp  05_read_write_edit_example.cpp  06_excel_file_copy_example.cpp  07_excel_format_parser_example.cpp  08_sheet_copy_with_format_example.cpp  09_high_performance_edit_example.cpp  10_edit_functionality_example.cpp  20_new_edit_architecture_example.cpp  21_package_editor_test.cpp  CMakeLists.txt  UserLayerExample.cpp  basic_reading_demo.cpp  basic_usage.cpp  color_test.cpp  columnar_optimization_demo.cpp  compare_xml_output.cpp  comprehensive_formatting_test.cpp  compression_benchmark.cpp  debug_test.cpp  debug_worksheet_xml.cpp  debug_xml_generation.cpp  direct_xml_comparison.cpp  edit_features_demo.cpp  enhanced_format_api_demo.cpp  excel_file_copy_example.cpp  excel_format_parser_example.cpp  format_demo.cpp  formatting.cpp  formatting_example.cpp  formatting_features_demo.cpp  high_performance_edit_example.cpp  high_performance_example.cpp  image_insertion_demo.cpp  large_data_example.cpp  large_file_reading_demo.cpp  memory_optimization_example.cpp  memory_pool_advanced_demo.cpp  (+50 more)
include/: Logger.hpp
src/: Logger.cpp  main.cpp
src/fastexcel/: FastExcel.cpp  FastExcel.hpp
src/fastexcel/api/: ReadOnlyExcel.hpp
src/fastexcel/archive/: CompressionEngine.cpp  CompressionEngine.hpp  FileManager.cpp  FileManager.hpp  LibDeflateEngine.cpp  LibDeflateEngine.hpp  MinizipParallelWriter.cpp  MinizipParallelWriter.hpp  ZipArchive.cpp  ZipArchive.hpp  ZipError.hpp  ZipReader.cpp  ZipReader.hpp  ZipWriter.cpp  ZipWriter.hpp  ZlibEngine.cpp  ZlibEngine.hpp
src/fastexcel/core/: AlignmentTypes.hpp  BatchFileWriter.cpp  BatchFileWriter.hpp  BlockSparseMatrix.hpp  BorderTypes.hpp  CSVProcessor.cpp  CSVProcessor.hpp  CacheSystem.cpp  CacheSystem.hpp  Cell.cpp  Cell.hpp  CellAddress.hpp  CellRangeManager.hpp  Color.cpp  Color.hpp  ColumnWidthManager.cpp  ColumnWidthManager.hpp  ColumnarStorageManager.cpp  ColumnarStorageManager.hpp  Constants.hpp  CustomPropertyManager.hpp  DefinedNameManager.hpp  DirtyManager.hpp  ErrorCode.cpp  ErrorCode.hpp  ExcelStructureGenerator.cpp  ExcelStructureGenerator.hpp  Exception.cpp  Exception.hpp  ExceptionBridge.hpp  Expected.hpp  FillTypes.hpp  FontTypes.hpp  Format.cpp  Format.hpp  FormatDescriptor.cpp  FormatDescriptor.hpp  FormatPool.cpp  FormatPool.hpp  FormatRepository.cpp  (+59 more)
src/fastexcel/edit/: EditSession.cpp  EditSession.hpp  RowWriter.cpp  RowWriter.hpp
src/fastexcel/memory/: AlignedAllocator.hpp  CellMemoryPool.hpp  FixedSizePool.hpp  FormatMemoryPool.hpp  IMemoryPool.hpp  IObjectPool.hpp  LazyInitializer.hpp  MemoryPoolOptimized.hpp  MultiSizePool.hpp  PoolAllocator.hpp  PoolManager.hpp  StringMemoryPool.hpp  StringPool.hpp  WorkbookMemoryManager.hpp
src/fastexcel/opc/: IPackageManager.hpp  PackageEditor.cpp  PackageEditor.hpp  PackageEditorManager.cpp  PackageEditorManager.hpp  PackageManagerService.hpp  PartGraph.cpp  PartGraph.hpp  ZipRepackWriter.cpp  ZipRepackWriter.hpp
src/fastexcel/parallel/: ParallelZipReader.cpp  ParallelZipReader.hpp
src/fastexcel/read/: ReadWorkbook.cpp  ReadWorkbook.hpp  ReadWorksheet.cpp  ReadWorksheet.hpp
src/fastexcel/reader/: BaseSAXParser.hpp  ColumnarWorksheetParser.cpp  ColumnarWorksheetParser.hpp  ColumnarXLSXReader.cpp  ColumnarXLSXReader.hpp  ContentTypesParser.cpp  (+21 more)
test/: CMakeLists.txt  README.md
test/integration/: WorkbookIntegration_test.cpp  test_integration.cpp
test/performance/: CMakeLists.txt  PerformanceBenchmark.hpp  PerformanceTestSuite.cpp  PerformanceTestSuite.hpp  benchmark_main.cpp  benchmark_read_write.cpp  benchmark_shared_formula.cpp  benchmark_simple.cpp  benchmark_xml_generation.cpp  test_performance_suite.cpp
test/unit/: Cell_test.cpp  XMLStreamReader_test.cpp  XMLWriter_test.cpp  ZipArchive_test.cpp  test_address_parsing.cpp  test_cell.cpp  test_cell_optimized.cpp  test_csv_edge_cases.cpp  test_csv_functionality.cpp  test_edit_features.cpp  test_excel_zip_compatibility.cpp  test_format.cpp  test_implicit_conversion.cpp  test_main.cpp  test_new_architecture.cpp  test_optimization.cpp  test_performance.cpp  test_reader.cpp  test_workbook.cpp  test_worksheet.cpp  test_xml_streaming.cpp  test_xml_writer.cpp  test_zip_compatibility.cpp  xml_stream_writer_test.cpp
(+88 files in other folders)
